--- a/MedicalLink/MedicalLink.csproj
+++ b/MedicalLink/MedicalLink.csproj
@@ -362,6 +362,12 @@
     <Compile Include="BaoCao\BCPhauThuatThuThuat\BCPhauThuat_YeuCau.Designer.cs">
       <DependentUpon>BCPhauThuat_YeuCau.cs</DependentUpon>
     </Compile>
+    <Compile Include="BaoCao\BCThucHienCLS\frmKhoaGuiYeuCau_CLS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BaoCao\BCThucHienCLS\frmKhoaGuiYeuCau_CLS.Designer.cs">
+      <DependentUpon>frmKhoaGuiYeuCau_CLS.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaoCao\BCPhauThuatThuThuat\ucBCPhauThuatThuThuat.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1359,6 +1365,9 @@
     <EmbeddedResource Include="BaoCao\BCPhauThuatThuThuat\BCPhauThuat_YeuCau.resx">
       <DependentUpon>BCPhauThuat_YeuCau.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="BaoCao\BCThucHienCLS\frmKhoaGuiYeuCau_CLS.resx">
+      <DependentUpon>frmKhoaGuiYeuCau_CLS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BaoCao\BCPhauThuatThuThuat\ucBCPhauThuatThuThuat.resx">
       <DependentUpon>ucBCPhauThuatThuThuat.cs</DependentUpon>
     </EmbeddedResource>
@@ -2077,6 +2086,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Templates\BC_110_TrichThuongGiuongYCCK.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\BC_111_ChiThuongGiuongNgoaiKieuVP.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
